objects/SDR_Mapping__c/SDR_Mapping__c.object-meta.xml
<CustomObject>
    <description>TAN-790</description>
    <label>SDR Mapping</label>
    <nameField>
        <displayFormat>SDRMAP- {0000}</displayFormat>
        <label>SDR Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDR Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>