objects/SDR_Mapping__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FED</fullName>
            </value>
            <value>
                <fullName>SLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>