objects/SDR_Mapping__c/listViews/EMEA_SDR_Mapping.listView-meta.xml
<ListView>
    <fullName>EMEA_SDR_Mapping</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>State_Province__c</columns>
    <columns>Queue_Name__c</columns>
    <columns>SDR_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>EMEA SDR Mapping</label>
</ListView>