objects/SDR_Mapping__c/listViews/US_SDR_Mapping.listView-meta.xml
<ListView>
    <fullName>US_SDR_Mapping</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>State_Province__c</columns>
    <columns>Vertical__c</columns>
    <columns>Queue_Name__c</columns>
    <columns>SDR_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>United States</value>
    </filters>
    <label>US SDR Mapping</label>
</ListView>